# aikandidattest

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
src/aikandidattest/: app.py  cli.py
src/aikandidattest/static/: style.css
src/aikandidattest/templates/: analyzing.html  base.html  login.html  result.html
tests/: test_package.py
