[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aikandidattest"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.0",
]

[project.scripts]
aikandidattest = "aikandidattest.cli:main"

[dependency-groups]
dev = [
    "ruff>=0.4",
    "commitizen>=3.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pre-commit>=3.0",
]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "--cov=aikandidattest",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
]

[tool.coverage.run]
source = ["src/aikandidattest"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 80

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501", # line too long – handled by ruff format
]

[tool.ruff.lint.isort]
known-first-party = ["aikandidattest"]

[tool.ruff.format]
# Compatible with ruff's default formatting; line-length is set above.

# ---------------------------------------------------------------------------
# Commitizen  –  semantic / conventional-commit version bumping
# ---------------------------------------------------------------------------
[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = [
    "pyproject.toml:^version",
    "src/aikandidattest/__init__.py:^__version__",
]
tag_format = "v$version"
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"
